# input-source-switcher

./: CMakeLists.txt  ISSWController.h  ISSWController.m  ISSWController.mm  ISSWIO.h  ISSWIO.m  ISSWInputSource.h  ISSWInputSource.m  LICENSE  README.md  formatters.cpp  formatters.h  ils_config.h.in  input_source_controller.cpp  input_source_controller.h  input_source_controller.mm  issw_config.h.in  main.cpp  main.m  main.mm  pre.h  test.c  utils.cpp  utils.h  utils.mm
